[package]
name = "pcache"
version = "0.1.0"
authors = ["Jeroen Knoops <jeroen.knoops@gmail.com>"]
edition = "2018"
description = "pcache caches program calls to third party tools."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "~2.33"
